syntax = "proto3";

package stages;

import "keys.proto";
import "pool_brackets.proto";



message Stage {
  keys.StageKey key = 1;
  string name = 2;
  uint32 best_of = 3;
}

service StageService {
  rpc GetAll(GetAllStagesRequest) returns (stream GetAllStagesResponse);
  rpc Get(GetStageRequest) returns (GetStageResponse);
  rpc Create(CreateStageRequest) returns (CreateStageResponse);
  rpc Update(UpdateStageRequest) returns (UpdateStageResponse);
  rpc Delete(DeleteStageRequest) returns (DeleteStageResponse);
}

message GetAllStagesRequest {
  keys.TournamentKey tournament_key = 1;
}

message GetAllStagesResponse {
  Stage stage = 1;
}

message GetStageRequest {
  keys.StageKey key = 1;
}

message GetStageResponse {
  Stage stage = 1;
  repeated pool_brackets.PoolBracket pool_brackets = 2;
}

message CreateStageRequest {
  Stage stage = 1;
}

message CreateStageResponse {}

message UpdateStageRequest {
  keys.StageKey key = 1;
  optional string name = 2;
  optional int32 best_of = 3;
}

message UpdateStageResponse {}

message DeleteStageRequest {
  keys.StageKey key = 1;
}

message DeleteStageResponse {}
